[package]
name = "kepler_core"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maths-rs = { version = "0.2.5", features = ["serde"] }
nanoid = "0.4.0"
serde = { version = "1.0.196", features = ["derive"] }
